<resources>
    <string name="app_name">Trivia App</string>
    <string name="question_1">What is your name ?</string>
    <string name="question_2">Who is the best cricketer in the world ?</string>
    <string name="question_3">What are the colors in the Indian national flag?</string>
    <string name="answer">Answer</string>
    <string name="next">Next</string>
    <string name="history">History</string>
    <string name="enter_name">Please enter your name</string>
    <string name="select_answer2">Please select any one</string>
    <string name="select_answer3">Please select any one or more than 1</string>
    <string name="first_page">First Question</string>
    <string name="second_page">Second Question</string>
    <string name="final_page">Final Question</string>
    <string name="summary">Summary</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="virat_kohli">Virat Kohli</string>
    <string name="adam_gilchirst">Adam Gilchirst</string>
    <string name="jacques_kallis">Jacques Kallis</string>
    <string name="finish">Finish</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="dummy_text">Here are the answers selected:</string>
    <string name="insert">Insert Successfully</string>
</resources>