<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_3"
        android:textSize="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/colorGray"/>


    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtQuestion"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/white"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_14sdp"/>

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox1"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/yellow"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_14sdp"/>

    <CheckBox
        android:id="@+id/checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox2"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/orange"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_14sdp"/>

    <CheckBox
        android:id="@+id/checkbox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox3"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/green"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_14sdp"/>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:text="@string/next" />

</RelativeLayout>