<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:textSize="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/colorGray"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_below="@+id/txtQuestion" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sachin_tendulkar"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_14sdp"/>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virat_kohli"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_14sdp"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adam_gilchirst"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_14sdp"/>

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jacques_kallis"
            android:textColor="@color/colorGray"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:text="@string/next" />

</RelativeLayout>