<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@color/colorWhite"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/colorWhite"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_2sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp">

            <TextView
                android:id="@+id/txtDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="@string/app_name"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_below="@id/txtDateTime"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/txtQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:layout_below="@+id/txtName"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/txtAnswer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_below="@+id/txtQuestion2"
                android:textSize="@dimen/_14sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/txtQuestion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:layout_below="@+id/txtAnswer2"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/txtAnswer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/_14sdp"
                android:layout_below="@+id/txtQuestion3"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGray"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>